--- a/Topics/Nested lists/lesson-info.yaml
+++ b/Topics/Nested lists/lesson-info.yaml
@@ -3,3 +3,7 @@ content:
 - Fill the blanks
 - Length of a list
 - Accessing elements of a matrix
+- Choosing elements from nested lists
+- A very nested list
+- A lot of nested lists
+- Conditions   nested lists
