--- a/Tetris/Getting Started/task-info.yaml
+++ b/Tetris/Getting Started/task-info.yaml
@@ -104,6 +104,15 @@ files:
     if __name__ == '__main__':
         Tetris('tetris.game').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/147/stages/791/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/11891#comment
+status: Failed
+feedback:
+  message: "Wrong answer in test #1\n\nA field with 6 grids is expected to be printed.\
+    \ Found 1 grids\n\nPlease find below the output of your program during this failed\
+    \ test.\nNote that the '>' character indicates the beginning of the input line.\n\
+    \n---\n\n> T\n- - - - \n- - - - \n- - - - \n- - - - \n- 0 - - \n0 0 0 - \n- -\
+    \ - - \n- - - - \n- 0 - - \n0 0 - - \n- 0 - - \n- - - - \n- - - - \n0 0 0 - \n\
+    - 0 - - \n- - - - \n- 0 - - \n- 0 0 - \n- 0 - - \n- - - - \n- 0 - - \n0 0 0 -\
+    \ \n- - - - \n- - - -"
+  time: "Mon, 27 Mar 2023 21:36:54 UTC"
 record: -1
