--- a/Tetris/I Disappear/task-info.yaml
+++ b/Tetris/I Disappear/task-info.yaml
@@ -284,6 +284,6 @@ files:
     if __name__ == '__main__':
         Tetris('tetris.game').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/147/stages/794/implement#comment
+feedback_link: https://hyperskill.org/learn/step/11894#comment
 status: Unchecked
 record: -1
