--- a/Tetris/I Like to Move It/task-info.yaml
+++ b/Tetris/I Like to Move It/task-info.yaml
@@ -193,6 +193,6 @@ files:
     if __name__ == '__main__':
         Tetris('tetris.game').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/147/stages/792/implement#comment
+feedback_link: https://hyperskill.org/learn/step/11892#comment
 status: Unchecked
 record: -1
