--- a/Tetris/I Like to Move It/task-info.yaml
+++ b/Tetris/I Like to Move It/task-info.yaml
@@ -193,9 +193,12 @@ files:
     if __name__ == '__main__':
         Tetris('tetris.game').run_tests()
   learner_created: false
-- name: tetris/game_ver_1.0.py
+- name: tetris/old/game_ver_1.0.py
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/11892#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Thu, 06 Apr 2023 16:23:26 UTC"
+record: 2
