--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -6,3 +6,10 @@ content:
 - Random module
 - Methods and attributes
 - Magic methods
+- Inheritance in Python
+- Method overriding
+- Functional decomposition
+- Stack in Python
+- Queue in Python
+- Any and all
+- Math functions
